metadata/force-app/main/default/objects/CustomName_qANHC__c/CustomName_qANHC__c.object-meta.xml
<CustomObject>
    <description>Description_DwkKK</description>
    <label>CustomLabel_CEOlY</label>
    <nameField>
        <label>CustomLabel_CEOlY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_CEOlYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>