metadata/force-app/main/default/objects/CustomName_qANHC__c/fields/CustomField_hJxCH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hJxCH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjQKJs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>