metadata/force-app/main/default/objects/CustomName_qANHC__c/fields/CustomField_rFelq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rFelq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzCBys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>