metadata/force-app/main/default/objects/CustomName_qANHC__c/fields/CustomField_SEYlo__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SEYlo__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLdUYU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>