metadata/force-app/main/default/objects/CustomName_qANHC__c/fields/CustomField_yhpbw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yhpbw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTVIaF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>