metadata/force-app/main/default/objects/CustomName_qANHC__c/fields/CustomField_ztzpb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ztzpb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYjrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>